# test-blog

./: Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
apps/api/v1/: permissions.py  serializers.py  urls.py  views.py
apps/blogs/: admin.py  models.py  selectors.py  services.py
apps/blogs/migrations/: 0001_initial.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
tests/: conftest.py  test_01_auth.py  test_02_unauth_user.py  test_03_user.py  test_04_author.py  test_05_admin.py  test_06_post.py
tests/fixtures/: fixture_data.py  fixture_user.py
