[tool.poetry]
name = "test-blog"
version = "0.1.0"
description = "API выполнено в рамках тестового задания"
authors = ["verafadeeva <lunatik.yar@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "test_blog"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1"
djangorestframework = "3.14.0"
drf-spectacular = "^0.26.5"
python-dotenv = "^1.0.0"
djoser = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
pytest-django = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['I001', 'W503']
exclude = ['*/migrations/', '.venv/']
per-file-ignores = ['*/settings.py:E501',]